classDiagram
    class Usuario {
        -Long id
        -String nombre
        -String email
        -String passwordHash
        -Rol rol
        -Boolean activo
        -LocalDateTime creadoEn
        +getters()
        +setters()
    }

    class Rol {
        <<enumeration>>
        SUPER_ADMIN
        ADMINISTRADOR
        RECEPCIONISTA
        LIMPIEZA
        CLIENTE
    }

    class Habitacion {
        -Long id
        -String nombre
        -String tipo
        -String descripcion
        -BigDecimal tarifaBase
        -Integer duracionBloqueHoras
        -EstadoHabitacion estado
        -String imagenUrl
        -LocalDateTime creadoEn
        +actualizarEstado(EstadoHabitacion nuevo) void
        +getters()
        +setters()
    }

    class EstadoHabitacion {
        <<enumeration>>
        DISPONIBLE
        OCUPADA
        LIMPIEZA_PENDIENTE
        EN_PROCESO
        MANTENIMIENTO
    }

    class Reserva {
        -Long id
        -Habitacion habitacion
        -Usuario cliente
        -String nombreHuesped
        -String telefono
        -String email
        -LocalDate fecha
        -LocalTime horaIngreso
        -LocalTime horaSalida
        -String notas
        -EstadoReserva estado
        -OrigenReserva origen
        -String qrToken
        -Boolean qrUsado
        -LocalDateTime creadoEn
        +validarVigencia() Boolean
        +marcarCheckin() void
        +getters()
        +setters()
    }

    class EstadoReserva {
        <<enumeration>>
        PENDIENTE
        CONFIRMADA
        CHECKIN
        FINALIZADA
        CANCELADA
    }

    class OrigenReserva {
        <<enumeration>>
        ONLINE
        MANUAL
    }

    class Turno {
        -Long id
        -Usuario usuario
        -LocalDate fecha
        -LocalTime horaInicio
        -LocalTime horaFin
        +getters()
        +setters()
    }

    class Incidencia {
        -Long id
        -Habitacion habitacion
        -Usuario reportadoPor
        -String descripcion
        -PrioridadIncidencia prioridad
        -EstadoIncidencia estado
        -LocalDateTime creadoEn
        +getters()
        +setters()
    }

    Usuario "1" --> "1" Rol : posee
    Usuario "1" --> "0..*" Turno : asignado a
    Usuario "1" --> "0..*" Reserva : realiza
    Usuario "1" --> "0..*" Incidencia : reporta
    Habitacion "1" --> "1" EstadoHabitacion : estado actual
    Habitacion "1" --> "0..*" Reserva : reservada en
    Habitacion "1" --> "0..*" Incidencia : tiene
    Reserva "1" --> "1" EstadoReserva : estado
    Reserva "1" --> "1" OrigenReserva : canal